--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
 numpy==1.16.2
 opencv-python==4.1.0.25
-zuper-nodes-z5>=5.0.9
-zuper-typing-z5>=5.3.0
-zuper-ipce-z5>=5.3.0
-zuper-commons-z5>=5.0.7
-aido-protocols-daffy>=5.0.19
-duckietown-world-daffy>=5.0.10
-duckietown-challenges-daffy>=5.1.1
+zuper-nodes-z6>=6
+zuper-typing-z6>=6
+zuper-ipce-z6>=6
+zuper-commons-z6>=6
+aido-protocols-daffy-aido4
+duckietown-world-daffy-aido4
+duckietown-challenges-daffy-aido4
 
 -e git://github.com/AndreaCensi/procgraph.git@master-python3#egg=procgraph
