--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,5 @@ duckietown-world-daffy-aido4
 duckietown-challenges-daffy-aido4
 
 -e git://github.com/AndreaCensi/procgraph.git@master-python3#egg=procgraph
+
+pipdeptree
