--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,16 @@
 numpy==1.16.2
 opencv-python==4.1.0.25
-zuper-nodes-z6>=6
-zuper-typing-z6>=6
-zuper-ipce-z6>=6
-zuper-commons-z6>=6
+zuper-nodes-z6
+zuper-typing-z6
+zuper-ipce-z6
+zuper-commons-z6
 aido-protocols-daffy-aido4
 duckietown-world-daffy-aido4
 duckietown-challenges-daffy-aido4
+duckietown-challenges-runner-daffy-aido4
+duckietown-serialization-ds1
+duckietown-tokens
+
 
 -e git://github.com/AndreaCensi/procgraph.git@master-python3#egg=procgraph
 
