--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,17 @@
-numpy==1.16.2
-opencv-python==4.1.0.25
-zuper-nodes-z6
-zuper-typing-z6
-zuper-ipce-z6
-zuper-commons-z6
-aido-protocols-daffy-aido4
-duckietown-world-daffy-aido4
-duckietown-challenges-daffy-aido4
-duckietown-challenges-runner-daffy-aido4
-duckietown-serialization-ds1
-duckietown-tokens
+numpy==1.18.1
+opencv-python==4.2.0.32
+zuper-nodes-z6==6.0.10
+zuper-typing-z6==6.0.59
+zuper-ipce-z6==6.0.22
+zuper-commons-z6==6.0.19
+aido-protocols-daffy-aido4==5.0.25
+duckietown-world-daffy-aido4==5.3.8
+duckietown-challenges-daffy-aido4==5.3.8
+duckietown-challenges-runner-daffy-aido4==5.0.18
+duckietown-serialization-ds1>=1.0.9,<2
+duckietown-tokens==5.3.2
 
 
 -e git://github.com/AndreaCensi/procgraph.git@master-python3#egg=procgraph
 
-pipdeptree
+pipdeptree==0.13.2
