--- a/requirements1.txt
+++ b/requirements1.txt
@@ -4,10 +4,10 @@ zuper-nodes-z6
 zuper-typing-z6
 zuper-ipce-z6
 zuper-commons-z6
-duckietown-challenges-daffy
-duckietown-challenges-runner-daffy
-duckietown-serialization-ds1>=1.0.9,<2
-duckietown-tokens
+# duckietown-challenges-daffy
+# duckietown-challenges-runner-daffy
+# duckietown-serialization-ds1>=1.0.9,<2
+# duckietown-tokens
 procgraph-z6
 
 pipdeptree==0.13.2
