--- a/requirements.pin.txt
+++ b/requirements.pin.txt
@@ -1,4 +1,5 @@
-
+numpy
+opencv-python
 pipdeptree==0.13.2
 plotly # opt
 scipy # opt
@@ -8,3 +9,4 @@ markdown # opt
 soupsieve # opt
 retrying # opt
 pydot # opt
+
