--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ zuper-typing-z6
 zuper-ipce-z6
 zuper-commons-z6
 procgraph-z6
-
+PyGeometry-z6
 # those are needed later anyway, we optimize a bit
 
 PyGeometry-z6 # opt
