--- a/requirements.pin.txt
+++ b/requirements.pin.txt
@@ -1,12 +1,12 @@
 # numpy
-opencv-python==4.3.0.36
+opencv-python==4.4.0.44
 # pipdeptree==0.13.2
-# plotly # opt
-# scipy # opt
-# lxml # opt
-# Pillow # opt
-# markdown # opt
-# soupsieve # opt
-# retrying # opt
-# pydot==1.4.1 # opt
+plotly # opt
+scipy # opt
+lxml # opt
+Pillow # opt
+markdown # opt
+soupsieve # opt
+retrying # opt
+pydot==1.4.1 # opt
 
